package com.morris.pattern.decorator;

public abstract class Coffee {

    public abstract String getName();

    public abstract Integer getPrice();

}
