@startuml

title 咖啡装饰者模式类图

abstract class Coffee {
    + void getName()
    + void getPrice()
}

class SimpleCoffee {
    + void getName()
    + void getPrice()
}

abstract class Dicorator {
    # Coffee coffee
}

Coffee <|-- SimpleCoffee
Coffee <|-- Dicorator
Coffee <--o Dicorator:+compoent

class MilkDecorator {
}

class SugarDecorator {
}

class MochaDecorator {
}

Dicorator <|-- MilkDecorator
Dicorator <|-- SugarDecorator
Dicorator <|-- MochaDecorator

@enduml